# 26w09-pdf-downloader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.da.md  README.md  config.toml  pyproject.toml
src/pdf_downloader/: __init__.py  __main__.py  application.py  pdfconverter.py  report.py
tests/: test_main.py
