[project]
name = "pdf-downloader"
version = "2026.0.1"
description = "A PDF downloader and API endpoint for adding reports"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "~=3.14.0"
dependencies = [
  "fastapi[standard]~=0.131.0",
  "httpx~=0.28.1",
  "openpyxl~=3.1.5",
  "pandas~=3.0.1",
  "pandas-stubs~=3.0.0",
]

[dependency-groups]
dev = [
  "coverage~=7.13.4",
  "pytest~=9.0.2",
]

[build-system]
requires = ["uv_build ~= 0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]
log_cli = true
log_cli_level = "DEBUG"

[tool.pyright]
stubPath = "src"
venvPath = "."
venv = ".venv"
enableTypeIgnoreComments = true

[tool.coverage.report]
exclude_also = [ "def __repr__" ]

[tool.ruff]
indent-width = 2
