[project]
name = "pdf-downloader"
version = "2026.1.0"
description = "A PDF downloader for downloading reports"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "~=3.14.0"
dependencies = [
  "httpx~=0.28.1",
  "openpyxl~=3.1.5",
  "pandas~=3.0.1",
  "pandas-stubs~=3.0.0",
  "pandera>=0.29.0",
  "pyqt6~=6.10.2",
  "pyqt6-stubs>=20250824",
  "pyqt6-webengine~=6.10.0",
  "pyvirtualdisplay==3.0",
]

[dependency-groups]
dev = [
  "coverage~=7.13.4",
  "pytest~=9.0.2",
]

[build-system]
requires = ["uv_build ~= 0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"

[tool.pyright]
stubPath = "src"
venvPath = "."
venv = ".venv"
enableTypeIgnoreComments = true

[tool.coverage.report]
exclude_also = [ "def __repr__" ]

[tool.ruff]
indent-width = 2
